--- a/styles/application.css
+++ b/styles/application.css
@@ -29,6 +29,7 @@
 
 .applyQuestion {
     width: 100%;
+    font-weight:500;
 }
 
 .questionEntry {
@@ -36,6 +37,8 @@
     width: 100%;
     border: none;
     border-bottom-style: groove;
+    margin-bottom: 0.9em;
+    font-weight: 400;
 }
 
 #applyFooter {
@@ -53,4 +56,27 @@
     padding-right: 1em;
     padding-top: 0.5em;
     padding-bottom: 0.5em;
+    margin-top: 1em;
+}
+
+#applyForm {
+    padding-top: 0.7em;
+    padding-bottom: 1.5em;
+}
+
+.applySectionHeader {
+    padding-bottom: 0.5em;
+    font-size: 22px;
+    font-weight: 700;
+}
+
+.applicationQuestion {
+    
+}
+
+.applicationSection {
+    padding-bottom: 2em;
+    box-shadow: 0px 0px 18px 8px rgba(0, 0, 0, 0.35);
+    padding: 1.3em;
+    margin-bottom: 1.5em;
 }
